deleted function calls for sklearn

--- a/workshop_code/workshop_1/workshop1.ipynb
+++ b/workshop_code/workshop_1/workshop1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Author: Gael Varoquaux <gael dot varoquaux at normalesup dot org>\n",
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Standard scientific Python imports\n",
@@ -55,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "digits = datasets.load_digits()"
@@ -72,6 +78,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -87,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "images_and_labels = list(zip(digits.images, digits.target))"
@@ -100,7 +109,8 @@
     "ExecuteTime": {
      "end_time": "2018-09-12T19:39:23.777467Z",
      "start_time": "2018-09-12T19:39:23.716525Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -115,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for index, (image, label) in enumerate(images_and_labels[:4]):\n",
@@ -136,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_samples = len(digits.images)\n",
@@ -153,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data[0].shape "
@@ -169,11 +185,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "classifier = svm.SVC(gamma=0.001, verbose=True)\n",
-    "# classifier = neural_network.MLPClassifier(hidden_layer_sizes=(256, 256,128,256,512,), verbose=True)"
+    "# Initialize SVM model from sklearn imported earlier "
    ]
   },
   {
@@ -186,11 +203,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# We learn the digits on the first half of the digits\n",
-    "classifier.fit(data[:n_samples // 2], digits.target[:n_samples // 2])"
+    "# Use fit command to learn the digits on the first half of data\n"
    ]
   },
   {
@@ -203,12 +221,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Now predict the value of the digit on the second half:\n",
-    "expected = digits.target[n_samples // 2:]\n",
-    "predicted = classifier.predict(data[n_samples // 2:])"
+    "# Now predict the value of the digit on the second half:"
    ]
   },
   {
@@ -221,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Classification report for classifier %s:\\n%s\\n\"\n",
@@ -238,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Confusion matrix:\\n%s\" % metrics.confusion_matrix(expected, predicted))"
@@ -254,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "images_and_predictions = list(zip(digits.images[n_samples // 2:], predicted))\n",
@@ -277,20 +301,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Seeing is believing, sample a head of around 20 examples, between the expected output vs the predictions made by each\n",
-    "# classifier"
+    "#classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# import a few classifiers, so that people can explore what those are"
+    "# import a few classifiers, explore from http://scikit-learn.org/stable/supervised_learning.html to compare classification algo performance."
    ]
   }
  ],
@@ -310,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
