Data preprocessing workshop added

--- a/workshop_code/workshop_2/workshop_2.ipynb
+++ b/workshop_code/workshop_2/workshop_2.ipynb
@@ -23,13 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Bread and butter libraries to deal with dataframes and matrices\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# Bread and butter libraries to deal with dataframes and matrices, pandas and numpy\n",
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -41,8 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Machine learning models cannot deal with null values, we will go over techniques to deal with them\n",
@@ -52,14 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# peek at first 10\n",
-    "df.head(10)"
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -83,12 +88,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Encode as 0 if income <=50K and as 1 if income >50K\n",
     "\n",
-    "df['income'] = [0 if x == '<=50K' else 1 for x in df['income']]"
+    "### FILL IN ###"
    ]
   },
   {
@@ -97,7 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.income.head(10)"
+    "# Inspect encoded values for income\n",
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -114,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Drop na values to not throw any errors\n",
-    "df_unprocessed = df\n",
+    "df_unprocessed = df # create a copy of df, save original for later\n",
     "df_unprocessed = df_unprocessed.dropna(axis=0, how='any')\n",
     "\n",
     "print(df.shape)\n",
@@ -124,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove non-numeric columns so model doesn't throw errors\n",
@@ -132,27 +143,31 @@
     "\n",
     "for col_name in df_unprocessed.columns:\n",
     "    if df_unprocessed[col_name].dtypes not in ['int32','int64','float32','float64']:\n",
-    "        df_unprocessed = df_unprocessed.drop(col_name, 1)"
+    "    ### FILL IN ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Split into features and target variable\n",
-    "X_unprocessed = df_unprocessed.drop('income', 1)\n",
-    "y_unprocessed = df_unprocessed.income"
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_unprocessed.head(5)"
+    "# Inspect first 5 values of X\n",
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -165,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import common ML tools from sklearn\n",
@@ -184,37 +201,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train_unproc, X_test_unproc, y_train, y_test = train_test_split(\n",
-    "    X_unprocessed, y_unprocessed, train_size=0.70, test_size=0.30)"
+    "    X_unprocessed, y_unprocessed, train_size=0.70, test_size=0.30, random_seed=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Function that returns model accuracy\n",
-    "def find_model_perf(X_train, y_train, X_test, y_test):\n",
-    "    model = LogisticRegression()\n",
-    "    model.fit(X_train, y_train)\n",
-    "    pred = model.predict(X_test)\n",
-    "    acc = accuracy_score(y_test, pred)\n",
-    "\n",
-    "    \n",
+    "def find_model_acc(X_train, y_train, X_test, y_test):\n",
+    "    ### FILL IN ###\n",
     "    return acc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "acc_unprocessed= find_model_perf(X_train_unproc, y_train, X_test_unproc, y_test)"
+    "acc_unprocessed= find_model_acc(X_train_unproc, y_train, X_test_unproc, y_test)"
    ]
   },
   {
@@ -243,10 +261,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Separate features from target var.\n",
+    "# Separate features from target var. , feature matrix commonly notated as X, and target variable as y\n",
     "\n",
     "y = df.income\n",
     "X = df.drop(['income'], 1)"
@@ -258,7 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y.head(15)"
+    "# optional sanity check\n",
+    "y.head(10)"
    ]
   },
   {
@@ -267,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.head(5)"
+    "X.head(10)"
    ]
   },
   {
@@ -290,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.get_dummies(X['education']).head(5)"
+    "### FILL IN ###"
    ]
   },
   {
@@ -345,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a list of features to dummy# Create \n",
@@ -355,10 +378,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Function to dummy all the categorical variables used for modeling\n",
+    "# Function to one-hot encode all the categorical variables used for modeling\n",
+    "\n",
     "def dummy_df(df, todummy_list):\n",
     "    for x in todummy_list:\n",
     "        dummies = pd.get_dummies(df[x], prefix=x, dummy_na=False)\n",
@@ -373,8 +399,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dummy_df(X, todummy_list)\n",
-    "print(X.head(5))"
+    "X = dummy_df(X, todummy_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Inspect X\n",
+    "\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -396,14 +434,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Impute missing values using Imputer in sklearn.preprocessing\n",
-    "from sklearn.preprocessing import Imputer\n",
-    "\n",
-    "imp = Imputer(missing_values='NaN', strategy='median', axis=0)\n",
-    "imp.fit(X)\n",
+    "from sklearn.preprocessing import Imputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imp = Imputer(missing_values='NaN', strategy='median', axis=0) # you can try with different strategies, based on dataset distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### FILL IN ###\n",
     "X = pd.DataFrame(data=imp.transform(X) , columns=X.columns)"
    ]
   },
@@ -427,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use PCA from sklearn.decompostion to find principal components\n",
@@ -459,18 +520,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, train_size=0.70, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, train_size=0.70, test_size=0.30,random_state=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "acc_proc= find_model_perf(X_train, y_train, X_test, y_test)"
+    "# find model accuracy on processed data\n",
+    "### FILL IN ###"
    ]
   },
   {
@@ -485,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "improvement = np.round(((acc_proc - acc_unprocessed)/acc_unprocessed),3)*100"
@@ -499,13 +565,6 @@
    "source": [
     "improvement"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -524,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
