fixed commenting, indentation

--- a/workshop_code/workshop_3/Workshop3.ipynb
+++ b/workshop_code/workshop_3/Workshop3.ipynb
@@ -161,10 +161,13 @@
    },
    "outputs": [],
    "source": [
-    "# Method that takes in dataframe, and degree of polynomial\n",
-    "# Outputs polynomial form of dataframe\n",
-    "\n",
     "def PF(X, degree):\n",
+    "    \"\"\"phi(X) polynomial expansion\n",
+    "    \n",
+    "    Method that takes in dataframe, and degree of polynomial\n",
+    "    and outputs polynomial expansion of dataframe\n",
+    "    \"\"\"\n",
+    "    \n",
     "    X = np.asarray(X)\n",
     "    tmp_raise = X\n",
     "    for i in range(2, degree+1):\n",
@@ -222,10 +225,10 @@
     "    # Initialize linear reg model and fit data\n",
     "    \n",
     "    ### FILL IN ###\n",
-    "    print('Training set R^2 for degree {}: {}'.format(i, \n",
-    "                                                       np.round(LR_model.score(X_train, y_train), 4)))\n",
-    "    print('Validation set R^2 for degree {}: {} \\n'. format(i,\n",
-    "                                                         np.round(LR_model.score(X_val, y_val),4)))\n",
+    "    \n",
+    "    print('Training set R^2 for degree {}: {}'.format(i, np.round(LR_model.score(X_train, y_train), 4)))\n",
+    "    print('Validation set R^2 for degree {}: {} \\n'. format(i, np.round(LR_model.score(X_val, y_val),4)))\n",
+    "    \n",
     "    validation_acc.append(np.round(LR_model.score(X_val, y_val),4))"
    ]
   },
@@ -489,6 +492,8 @@
    },
    "outputs": [],
    "source": [
+    "# Code Isaac used to generate the tree.png file using graphviz\n",
+    "\n",
     "# dot_data = tree.export_graphviz(clf, out_file=None, \n",
     "#                          feature_names=df_iris_X.columns,  \n",
     "#                          class_names=df_iris_y,  \n",
